# bailey

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bailey/: __init__.py  __main__.py  _http.py  confluence.py  jira.py
skills/bailey-confluence/: SKILL.md
tests/: test_bailey.py
